# Stormwater-Management-Model

./: .gitignore  CMakeLists.txt  appveyor.yml
.github/workflows/: build-and-test.yml
include/: toolkitAPI.h
src/: massbal.c  objects.h  project.c  stats.c  surfqual.c  toolkitAPI.c
src/outfile/: CMakeLists.txt  swmm_output.c
src/outfile/include/: swmm_output.h
src/run/: CMakeLists.txt  main.c
src/solver/: CMakeLists.txt  consts.h  culvert.c  datetime.c  datetime.h  enums.h  error.h  funcs.h  globals.h  input.c  landuse.c  lid.c  massbal.c  objects.h  project.c  stats.c  statsrpt.c  swmm5.c  swmm5_2.c
src/solver/include/: swmm5.h  swmm5_2.h  swmm_types.h
tests/: CMakeLists.txt  test_output.cpp  test_toolkitapi.cpp  test_toolkitapi.hpp  test_toolkitapi_gage.cpp  test_toolkitapi_pollut.cpp  test_toolkitapi_stats.cpp
tests/outfile/: test_output.cpp
tests/solver/: CMakeLists.txt  test_datetime.cpp  test_solver.cpp  test_solver.hpp  test_swmm5.cpp
tests/solver/data/: example3.inp
tools/: app-config.sh  app-config.zsh  before-nrtest.cmd  before-nrtest.sh  before-nrtest.zsh  make.cmd  make.zsh  relocate.zsh  run-nrtests.cmd  run-nrtests.zsh
tools/swmm-output/src/: swmm_output.c
